--- a/index.html
+++ b/index.html
@@ -7,9 +7,117 @@
 	<link rel="stylesheet"  type="text/css" href="css/style.css">
 	<link rel="shortcut icon" href="./favicon.ico">
 </head>
-
 <body>
-	<p>
+		<header style="height: 100vh">	
+			<div class="top_img position-relative py-5">
+					<div class="container">
+						<div class="text-center mb-3">
+							<img src="img/logo-wt.png" alt="logo" class='logo'>
+						</div>
+						<p class="text-white h3 text-center">bootstrap 2019</p>
+						<div>
+							<h1 class="text-white display-3 align-bottom text-center">Hello World</h1>
+							<h2 class="text-white text-center align-bottom mb-3">practice page practice page practice page practice page practice page </h2>
+							<div class="text-center d-none d-lg-block">
+								<a class="btn btn-lg btn-outline-danger bg-white text-danger font-weight-bold mx-md-2">ボタン１</a>
+								<a class="btn btn-lg btn-danger font-weight-bold mx-md-2">ボタン２</a>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!--ナビゲーション-->
+				<nav class="navbar navbar-expand-lg navbar-dark bg-brand-color fixed-bottom">
+					<button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+						<ul class="navbar-nav mr-auto mb-2 nav-fill w-100 nav-justified py-3 py-lg-0">
+							<li class="nav-item border-left border-right">menue</li>
+							<li class="nav-item border-left border-right">menue</li>
+							<li class="nav-item border-left border-right">menue</li>
+							<li class="nav-item border-left border-right">menue</li>
+							<li class="nav-item border-left border-right">menue</li>
+						</ul>
+					</li>
+					<div class="text-center d-md-none">
+						<a>ボタン１</a>
+						<a>ボタン２</a>
+					</div>
+				</nav>
+			</header>
+
+			<!------ここからメイン------------>
+			<main>
+				<section>
+						<h2 class="text-center text-light py-4 bg-brand-color">社員インタビュー</h2>
+						<div class="container py-5">
+							<div class="row pb-5">
+								<div class="col-12 col-md-5 col-lg-3 mb-3"> <img class="w-100 rounded-circle border" src="img/staff-image1.jpg" alt="社員1"> </div>
+								<div class="col-12 col-md-7 col-lg-9 py-3">
+									<p class=""><span class="border p-2 h5">営業スタッフ</span></p>
+									<h3 class="font-weight-bold py-2">企画事業部プロデューサー／山田 一郎（32歳）</h3>
+									<p class="">コンテンツ企画事業部セクション　2015年10月入社（中途採用）</p>
+									<p>親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。</p>
+									<a href="sample/index.html" class="btn btn-primary">ボタン文言</a> </div>
+							</div>
+						</div>
+				</section>
+
+				<section>
+					<h2 class="text-center text-light py-4 bg-brand-color">募集要項</h2>
+					<div class="container py-5">
+					<table class="table table-bordered">
+						<tr>
+							<th scope="row">募集職種</th>
+								<td>
+								<ul class="list-unstyled">
+									<li>あああああ</li>
+									<li>あああああ</li>
+									<li>あああああ</li>
+								</ul>
+								</td>
+							
+						</tr>
+						<tr>
+							<th scope="row">給与</th>
+								<td><ul class="list-unstyled">
+											<li>ああああ</li>
+											<li>ああああ</li>
+											<li>ああああ</li>
+									</ul>
+								</td>
+						</tr>
+					</table>
+					</div>
+				</section>
+				<!-------------------->
+
+			<hr>
+			<!---------------->
+			<section>
+				<a>新卒採用エントリー</a>
+			</section>
+			</main>
+
+			<!------------------>
+			<footer class="text-center text-muted">
+				<section class="bg-light py-5">
+					<div class="container">
+						<h2>
+							<img src="img/logo.png" alt="footer_logo" class="footer_logo mb-3">
+						</h2>
+					</div>
+				</section>
+
+				<div class="py-5">
+					<ul class="list-unstyled text-small text-center">
+						<li class="d-lg-inline-block m-0 border-right"><a class="mx-3 text-muted">個人情報保護</a></li>
+					</ul>
+					<h4 class="text-center h6">&copy;junta</h4>
+				</div>
+
+				</div>
+			</footer>
+
+			
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
